<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>SpringCloud-Seckill-Shop</artifactId>

  <dependencies>
    <!-- 集成commons工具类 -->
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>${lombok.version}</version>
    </dependency>
    <!--配置文件处理器-->
    <dependency>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
    </dependency>
    <!--  spring test  -->
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>junit-vintage-engine</artifactId>
          <groupId>org.junit.vintage</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
  </dependencies>
  <developers>
    <developer>
      <email>heshw97@hotmail.com</email>
      <name>He Shaowen</name>
    </developer>
  </developers>
  <groupId>cn.heshw</groupId>
  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>shop-base</module>
    <module>shop-common</module>
    <module>shop-business</module>
  </modules>

  <packaging>pom</packaging>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cn.heshw</groupId>
        <artifactId>shop-common-bom</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <artifactId>druid-spring-boot-starter</artifactId>
        <groupId>com.alibaba</groupId>
        <version>${druid.version}</version>
      </dependency>
      <dependency>
        <artifactId>mysql-connector-java</artifactId>
        <groupId>mysql</groupId>
        <version>${mysql.version}</version>
      </dependency>
      <dependency>
        <artifactId>mybatis-spring-boot-starter</artifactId>
        <groupId>org.mybatis.spring.boot</groupId>
        <version>${mybatis.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
        <groupId>com.alibaba.cloud</groupId>
        <version>${cloud-alibaba.version}</version>
      </dependency>
      <!--  spring-cloud    -->
      <dependency>
        <artifactId>spring-cloud-dependencies</artifactId>
        <groupId>org.springframework.cloud</groupId>
        <version>${cloud.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-cloud-starter-gateway</artifactId>
        <groupId>org.springframework.cloud</groupId>
        <version>${gateway.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
        <groupId>com.alibaba.cloud</groupId>
        <version>${nacos.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
        <groupId>com.alibaba.cloud</groupId>
        <version>${nacos.version}</version>
      </dependency>
      <dependency>
        <groupId>com.spring4all</groupId>
        <artifactId>swagger-spring-boot-starter</artifactId>
        <version>${swagger.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-security-jwt</artifactId>
        <groupId>org.springframework.security</groupId>
        <version>1.0.10.RELEASE</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-starter-openfeign</artifactId>
        <version>${feign.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
        <version>${hystrix.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-actuator</artifactId>
        <version>${actuator.version}</version>
      </dependency>
      <!--redis依赖-->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-data-redis</artifactId>
        <version>${redis.version}</version>
      </dependency>
      <!--jackson模块-->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-json</artifactId>
        <version>${redis.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.3.5.RELEASE</version>
  </parent>

  <properties>
    <cloud-alibaba.version>2.2.3.RELEASE</cloud-alibaba.version>
    <nacos.version>2.2.3.RELEASE</nacos.version>
    <gateway.version>2.2.3.RELEASE</gateway.version>
    <cloud.version>Hoxton.SR9</cloud.version>
    <druid.version>1.2.3</druid.version>
    <java.version>1.8</java.version>
    <lombok.version>1.18.16</lombok.version>
    <mybatis.version>2.1.4</mybatis.version>
    <mysql.version>8.0.22</mysql.version>
    <feign.version>2.2.3.RELEASE</feign.version>
    <hystrix.version>2.2.3.RELEASE</hystrix.version>
    <swagger.version>1.9.1.RELEASE</swagger.version>
    <actuator.version>2.1.13.RELEASE</actuator.version>
    <redis.version>2.1.13.RELEASE</redis.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <repositories>
    <repository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://repo.spring.io/libs-milestone</url>
    </repository>
  </repositories>

  <version>1.0-SNAPSHOT</version>

  <build>
    <plugins>
      <!-- config for lombok when JDK version is too high like JDK16. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>16</source>
          <target>16</target>
          <fork>true</fork>
          <compilerArgs>
            <arg>--enable-preview</arg>
            <arg>-Xlint:all</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
          </compilerArgs>
          <!--for unmappable characters in classes-->
          <encoding>UTF-8</encoding>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <!--for lombok annotations to resolve-->
          <!--contradictory to maven, intelliJ fails with this-->
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.16</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>